--- a/ecommerce-store/index.html
+++ b/ecommerce-store/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon-32x32.png">
     <title>Smart Tech</title>
   </head>
   <body>
